--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "zipouter",
-  "version": "1.0.0",
-  "description": "This is the npm package of zipouter.",
+  "version": "1.0.1",
+  "description": "A simple npm package to extract and process the contents of a zip file, supporting multiple programming languages including Java, JavaScript, Python, and more.",
   "main": "dist/index.js",
   "type": "module",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "npx rollup -c"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [ 
+    "npm",
+    "zip",
+    "extract",
+    "process",
+    "compilation",
+    "java",
+    "javascript",
+    "python",
+    "programming languages"],
+  "author": "Aditya SwayamSiddha",
+  "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-typescript": "^11.1.6",
